--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=vaga-pro
+spring.datasource.url=jdbc:postgresql://localhost:5432/vacancy_management
+spring.datasource.username=postgres
+spring.datasource.password=2001
+spring.jpa.hibernate.ddl-auto=update
