:package: build: add secret key

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/vacancy_management
 spring.datasource.username=postgres
 spring.datasource.password=2001
 spring.jpa.hibernate.ddl-auto=update
+
+security.token.secret=VAGA_PRO#
