:wrench: chore: add new secret key

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=2001
 spring.jpa.hibernate.ddl-auto=update
 
 security.token.secret=VAGA_PRO#
+security.token.secret.candidate=VAGA_PRO#CANDIDATE
