:lock: token for SonarQube

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 security.token.secret=VAGA_PRO#
 security.token.secret.candidate=VAGA_PRO#CANDIDATE
+
+token.sonar=sqp_e2d6cc13a5632c8253ceacc27810b03495bfd0b4
