:wrench: chore: configure actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ security.token.secret=VAGA_PRO#
 security.token.secret.candidate=VAGA_PRO#CANDIDATE
 
 token.sonar=sqp_e2d6cc13a5632c8253ceacc27810b03495bfd0b4
+
+management.endpoints.enable-by-default=false
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.endpoint.health.enable=true
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+
+
