--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.application.name=vaga-pro
-spring.datasource.url=jdbc:postgresql://localhost:5432/vacancy_management
-spring.datasource.username=postgres
-spring.datasource.password=2001
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 security.token.secret=VAGA_PRO#
