--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -15,3 +15,11 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
+      - name: Build project
+        run: mvn clean install
+      - name: Login docker
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+      - name: Build docker image
+        run: docker build -t devbrenopereira/vacancy_management .
+      - name: Publish image
+        run: docker push devbrenopereira/vacancy_management
